--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <title>Byte Surgeon</title>
+    <title>Byte Surgeon - under Construction</title>
     <link rel="icon" type="image/x-icon" href="./icon.ico">
     <link rel="stylesheet" href="./style0.css">
     <link rel="stylesheet" href="./MQ.css">
