--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ justify-content: center;gap: 2rem;flex-wrap: wrap;">
     <h2>FAQs</h2>
     <p class="subtitle" style="margin-bottom: 0;"><b>CITIZENSHIP:</b> U.S.</p>
     <p class="subtitle" style="margin-bottom: 0;"><b>RELOCATION:</b> Open</p>
-    <p class="subtitle" style="margin-bottom: 0;"><b>TRANSPORTATION:</b> Has own vehicle</p>
+    <p class="subtitle" style="margin-bottom: 0;"><b>TRANSPORTATION:</b> Own vehicle</p>
     <p class="subtitle" style="margin-bottom: 0;"><b>WORK ENVIRONMENT:</b> Remote / On-site / Hybrid</p>
     <p class="subtitle" style="margin-bottom: 0;"><b>PROTECTED VETERAN:</b> No</p>
     <p class="subtitle" style="margin-bottom: 0;"><b>WILLING TO TRAVEL:</b> Yes</p>
