--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ justify-content: center;gap: 2rem;flex-wrap: wrap;">
             </div>
 <div style="height:200px;width:400px;"></div>
 
-            <div style="position:relative;height:1px;width:1px;overflow:visible;z-index:3"><img style= "bottom:0;position:absolute;height:230px;"src="rick.gif"></div>
+            <!--<div style="position:relative;height:1px;width:1px;overflow:visible;z-index:3"><img style= "bottom:0;position:absolute;height:230px;"src="rick.gif"></div>-->
 <!--Footer start-->
 <div id="myFoot">
   <div style="height:100%;width:50%;float:left; display:flex;
